syntax = "proto3";

package order;

message CreateParam {
  uint32 addressID = 1;
  string remark = 2;
}

// Order 订单
message Order {
  uint32 ID = 1;  // 表id mediumint(8)
  string orderSN = 2;   // 订单编号 varchar(20)
	float totalAmount = 3;   // 订单总价 decimal(10,2
}

message List {
  message OrderWithGoods {
    message Order {
      uint32 ID = 1;
      uint32 orderState = 2;
      string orderSN = 3;
      uint32 shippingState = 4;
      uint32 payState = 5;
      float goodsPrice = 6;
      float shippingPrice = 7;
      float orderAmount = 8;
      float totalAmount = 9;
      int64 addTime = 10;
      string userNote = 11;
      string adminNote = 12;
    }
    Order order = 1;

    message OrderGoods {
      uint32 ID = 1;
      uint32 orderID = 2;
      uint32 goodsID = 3;
      string goodsName = 4;
      uint32 goodsNum = 5;
      float goodsPrice = 6;
      float costPrice = 7;
      string specKeyName = 8;
    }

    repeated OrderGoods orderGoodses = 2;
  }

  repeated OrderWithGoods orders = 1;
}
